--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
     "typescript": "~5.8.3",
+    "unocss": "^66.5.2",
     "vite": "^7.1.7",
     "vue-tsc": "^3.0.7"
   }
