--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
   "name": "five-d-data-frontend-exam",
-  "private": true,
-  "version": "0.0.0",
   "type": "module",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint:fix": "eslint --fix",
+    "prepare": "husky"
   },
   "dependencies": {
     "pinia": "^3.0.3",
     "vue": "^3.5.21"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^5.4.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
+    "eslint": "^9.36.0",
+    "eslint-plugin-format": "^1.0.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.1",
     "typescript": "~5.8.3",
     "unocss": "^66.5.2",
     "vite": "^7.1.7",
